--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -117,3 +117,7 @@ post > header time {
 .commentForm button[type=submit]:hover {
   background: var(--green-300);
 }
+
+.commentList {
+  margin-top: 2rem;
+}
