--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -106,7 +106,12 @@ post > header time {
   transition: background-color 0.3s;
 }
 
-.commentForm button[type=submit]:hover {
+.commentForm button[type=submit]:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
+.commentForm button[type=submit]:not(:disabled):hover {
   background: var(--green-300);
 }
 
